--- a/UI-Design/Management-UI/show-hide-test.ui
+++ b/UI-Design/Management-UI/show-hide-test.ui
@@ -99,7 +99,76 @@
 	border-color: rgb(193, 139, 111);;
 	border-style: solid;
 	border-width: 0 0 3px 0;
-}</string>
+}
+/* TABLE VIEW PORTION */
+QTableView QHeaderView {
+    background-color: rgb(61, 80, 95);
+    border: none;
+    border-bottom: 3px solid rgb(193, 139, 111);
+    color: #ffffff;
+    font-family: Verdana;
+    font-size: 12px;
+}
+
+QTableView QHeaderView::section {
+    background-color: rgb(61, 80, 95);
+    color: #ffffff;
+    font-family: Verdana;
+    font-size: 12px;
+    border: none;
+}
+
+QTableView {
+    background-color: rgba(61, 80, 95, 100);
+    color: #ffffff;
+    font-family: Verdana;
+    font-size: 12px;
+    border: none;
+    selection-background-color: rgb(95, 80, 61);
+    selection-color: #ffffff;
+}
+
+QTableView::item {
+    padding: 5px;
+}
+
+QTableView::item:selected {
+    background-color: rgb(95, 80, 61);
+    color: #ffffff;
+}
+
+QTableView::item:focus {
+    background-color: rgb(95, 80, 61);
+    color: #ffffff;
+    outline: none;
+}
+
+QTableView::item:hover {
+    background-color: rgb(240, 220, 210); /* Very light brown */
+    border: 1px solid rgb(173, 216, 230); /* Light blue */
+    color: #000000; /* Black */
+}
+
+#cost_upper_table, #cost_lower_table {
+    gridline-color: rgb(193, 139, 111);
+    border-color: rgb(193, 139, 111);
+    border-style: solid;
+    border-width: 0 0 3px 0;
+    color: rgb(38, 163, 170);
+    font-family: Verdana;
+    font-size: 12px;
+}
+
+#cost_upper_table QLabel, #cost_lower_table QLabel {
+    font: 700 14pt &quot;Candara&quot;;
+    color: rgb(38, 163, 170);
+}
+
+#cost_upper_table QWidget, #cost_lower_table QWidget {
+    font: 12px &quot;Verdana&quot;;
+    color: #ffffff;
+}
+</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -433,7 +502,7 @@
              <string notr="true"/>
             </property>
             <property name="currentIndex">
-             <number>0</number>
+             <number>1</number>
             </property>
             <widget class="QWidget" name="dashboard_view">
              <layout class="QVBoxLayout" name="verticalLayout_8">
@@ -1019,50 +1088,74 @@
              </layout>
             </widget>
             <widget class="QWidget" name="cost_view">
-             <layout class="QVBoxLayout" name="verticalLayout_11">
+             <layout class="QVBoxLayout" name="verticalLayout_10">
               <item>
-               <widget class="QFrame" name="frame_17">
-                <property name="frameShape">
-                 <enum>QFrame::StyledPanel</enum>
+               <widget class="QLabel" name="cost_upper_title">
+                <property name="maximumSize">
+                 <size>
+                  <width>99999</width>
+                  <height>15</height>
+                 </size>
                 </property>
-                <property name="frameShadow">
-                 <enum>QFrame::Raised</enum>
+                <property name="text">
+                 <string>Man Hours</string>
                 </property>
-                <layout class="QVBoxLayout" name="verticalLayout_10">
-                 <item alignment="Qt::AlignTop">
-                  <widget class="QLabel" name="label_10">
-                   <property name="font">
-                    <font>
-                     <pointsize>-1</pointsize>
-                     <bold>true</bold>
-                    </font>
-                   </property>
-                   <property name="text">
-                    <string>Cost View</string>
-                   </property>
-                   <property name="alignment">
-                    <set>Qt::AlignCenter</set>
-                   </property>
-                  </widget>
-                 </item>
-                </layout>
                </widget>
               </item>
               <item>
-               <widget class="QFrame" name="frame_18">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
+               <widget class="QTableWidget" name="cost_upper_table">
+                <column>
+                 <property name="text">
+                  <string>User</string>
+                 </property>
+                </column>
+                <column>
+                 <property name="text">
+                  <string>Hours Worked</string>
+                 </property>
+                </column>
+                <column>
+                 <property name="text">
+                  <string>Cost</string>
+                 </property>
+                </column>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="cost_lower_title">
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>15</height>
+                 </size>
                 </property>
-                <property name="frameShape">
-                 <enum>QFrame::StyledPanel</enum>
+                <property name="text">
+                 <string>Parts</string>
                 </property>
-                <property name="frameShadow">
-                 <enum>QFrame::Raised</enum>
-                </property>
-                <layout class="QGridLayout" name="gridLayout_2"/>
+               </widget>
+              </item>
+              <item>
+               <widget class="QTableWidget" name="cost_lower_table">
+                <column>
+                 <property name="text">
+                  <string>User</string>
+                 </property>
+                </column>
+                <column>
+                 <property name="text">
+                  <string>Part</string>
+                 </property>
+                </column>
+                <column>
+                 <property name="text">
+                  <string>New Column</string>
+                 </property>
+                </column>
+                <column>
+                 <property name="text">
+                  <string>Date</string>
+                 </property>
+                </column>
                </widget>
               </item>
              </layout>
