--- a/UI-Design/Maintenance-UI/Maintenance-UI.ui
+++ b/UI-Design/Maintenance-UI/Maintenance-UI.ui
@@ -56,13 +56,13 @@
     background-color: rgb(61, 80, 95);
 }
 
-#left_header_nav QPushButton,#right_header_nav QPushButton {
+#left_header_nav QPushButton,#right_header_nav QPushButton, #addJCN_pushButton QPushButton {
     background-color: rgb(61, 80, 95);
     border-radius: 15px;
     border: 3px solid rgb(120, 157, 186);
 }
 
-#left_nav_section QPushButton, #left_header_nav QPushButton, #right_header_nav QPushButton {
+#left_nav_section QPushButton, #left_header_nav QPushButton, #right_header_nav QPushButton, #addJCN_pushButton QPushButton {
     background-color: rgb(61, 80, 95);
     border-radius: 15px;
     border: 3px solid rgb(120, 157, 186);
@@ -70,7 +70,7 @@
     padding-left: 8px;
 }
 
-#left_nav_section QPushButton:hover, #left_header_nav QPushButton:hover, #right_header_nav QPushButton:hover {
+#left_nav_section QPushButton:hover, #left_header_nav QPushButton:hover, #right_header_nav QPushButton:hover, #addJCN_pushButton QPushButton:hover {
     background-color: rgb(95, 80, 61);
     border-radius: 16px;
     border: 3px solid rgb(186, 157, 120);
@@ -1855,7 +1855,7 @@ color: rgb(66, 8, 36);</string>
                          <rect>
                           <x>8</x>
                           <y>30</y>
-                          <width>231</width>
+                          <width>221</width>
                           <height>31</height>
                          </rect>
                         </property>
@@ -1893,30 +1893,26 @@ color: rgb(66, 8, 36);</string>
                        <widget class="QPushButton" name="addJCN_pushButton">
                         <property name="geometry">
                          <rect>
-                          <x>40</x>
-                          <y>140</y>
-                          <width>191</width>
-                          <height>71</height>
+                          <x>70</x>
+                          <y>160</y>
+                          <width>121</width>
+                          <height>51</height>
                          </rect>
                         </property>
+                        <property name="minimumSize">
+                         <size>
+                          <width>121</width>
+                          <height>51</height>
+                         </size>
+                        </property>
+                        <property name="maximumSize">
+                         <size>
+                          <width>121</width>
+                          <height>51</height>
+                         </size>
+                        </property>
                         <property name="styleSheet">
-                         <string notr="true">#pushButton {
-    border-radius: 15px;
-    border: 3px solid rgb(120, 157, 186);
-    text-align: center;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(75,100,130), stop: 1 rgb(61, 80, 95));
-}
-
-#pushButton:hover {
-    border-radius: 16px;
-    border: 3px solid rgb(186, 157, 120);
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(95,120,150), stop: 1 rgb(75,100,130));
-}
-
-#pushButton:pressed {
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(61, 80, 95), stop: 1 rgb(45,64,75));
-}
-</string>
+                         <string notr="true"/>
                         </property>
                         <property name="text">
                          <string>Add JCN</string>
