--- a/UI-Design/Maintenance-UI/Maintenance-UI.ui
+++ b/UI-Design/Maintenance-UI/Maintenance-UI.ui
@@ -507,7 +507,7 @@ QTableView::item:hover {
              <string notr="true"/>
             </property>
             <property name="currentIndex">
-             <number>2</number>
+             <number>0</number>
             </property>
             <widget class="QWidget" name="dashboard_view">
              <layout class="QVBoxLayout" name="verticalLayout_8">
@@ -1994,6 +1994,12 @@ color: rgb(66, 8, 36);</string>
              <layout class="QVBoxLayout" name="verticalLayout_17">
               <item>
                <widget class="QFrame" name="chart_top">
+                <property name="minimumSize">
+                 <size>
+                  <width>753</width>
+                  <height>232</height>
+                 </size>
+                </property>
                 <property name="frameShape">
                  <enum>QFrame::StyledPanel</enum>
                 </property>
@@ -2020,6 +2026,12 @@ color: rgb(66, 8, 36);</string>
               </item>
               <item>
                <widget class="QFrame" name="chart_bottom">
+                <property name="minimumSize">
+                 <size>
+                  <width>753</width>
+                  <height>231</height>
+                 </size>
+                </property>
                 <property name="frameShape">
                  <enum>QFrame::StyledPanel</enum>
                 </property>
