--- a/UI-Design/Maintenance-UI/Maintenance-UI.ui
+++ b/UI-Design/Maintenance-UI/Maintenance-UI.ui
@@ -559,7 +559,7 @@ QTableView::item:hover {
                  <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
                   <widget class="QLabel" name="label">
                    <property name="text">
-                    <string>Awaiting Approval</string>
+                    <string>Newest JCN's</string>
                    </property>
                   </widget>
                  </item>
@@ -581,8 +581,26 @@ QTableView::item:hover {
                  <enum>QFrame::Raised</enum>
                 </property>
                 <layout class="QGridLayout" name="gridLayout">
+                 <property name="leftMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="topMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="rightMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="bottomMargin">
+                  <number>0</number>
+                 </property>
                  <item row="0" column="0">
                   <widget class="QFrame" name="dashboard_frame_left">
+                   <property name="minimumSize">
+                    <size>
+                     <width>300</width>
+                     <height>440</height>
+                    </size>
+                   </property>
                    <property name="frameShape">
                     <enum>QFrame::StyledPanel</enum>
                    </property>
