--- a/UI-Design/Management-UI/Management-UI.ui
+++ b/UI-Design/Management-UI/Management-UI.ui
@@ -548,8 +548,26 @@ QTableView::item:hover {
                  <enum>QFrame::Raised</enum>
                 </property>
                 <layout class="QGridLayout" name="gridLayout">
+                 <property name="leftMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="topMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="rightMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="bottomMargin">
+                  <number>0</number>
+                 </property>
                  <item row="0" column="0">
                   <widget class="QFrame" name="dashboard_frame_left">
+                   <property name="minimumSize">
+                    <size>
+                     <width>210</width>
+                     <height>424</height>
+                    </size>
+                   </property>
                    <property name="frameShape">
                     <enum>QFrame::StyledPanel</enum>
                    </property>
