--- a/UI-Design/Management-UI/Management-UI.ui
+++ b/UI-Design/Management-UI/Management-UI.ui
@@ -71,6 +71,14 @@
 	border-radius: 16px;
 	border: 3px solid rgb(186, 157, 120);
 }
+/* JCN underline */
+#set_1, #set_2, #set_3, #set_4, #set_5, #set_6 {
+    border-bottom: 3px solid rgb(186, 157, 120);
+}
+#jcn_num_1, #jcn_num_2, #jcn_num_3, #jcn_num_4, #jcn_num_5 {
+    border-bottom: 3px solid rgb(186, 157, 120);
+}
+
 #pri_1, #pri_2, #pri_3,
 #set_1_num, #set_2_num, #set_3_num, #set_4_num, #set_5_num {
 	font: 14pt &quot;Cambria&quot;;
@@ -580,13 +588,13 @@ QTableView::item:hover {
                   <widget class="QFrame" name="dashboard_frame_center">
                    <property name="minimumSize">
                     <size>
-                     <width>183</width>
+                     <width>250</width>
                      <height>0</height>
                     </size>
                    </property>
                    <property name="maximumSize">
                     <size>
-                     <width>183</width>
+                     <width>250</width>
                      <height>16777215</height>
                     </size>
                    </property>
@@ -605,13 +613,13 @@ QTableView::item:hover {
                       <property name="minimumSize">
                        <size>
                         <width>165</width>
-                        <height>0</height>
+                        <height>140</height>
                        </size>
                       </property>
                       <property name="maximumSize">
                        <size>
                         <width>165</width>
-                        <height>141</height>
+                        <height>140</height>
                        </size>
                       </property>
                       <property name="frameShape">
@@ -622,6 +630,18 @@ QTableView::item:hover {
                       </property>
                       <layout class="QVBoxLayout" name="verticalLayout_9">
                        <property name="spacing">
+                        <number>0</number>
+                       </property>
+                       <property name="leftMargin">
+                        <number>0</number>
+                       </property>
+                       <property name="topMargin">
+                        <number>0</number>
+                       </property>
+                       <property name="rightMargin">
+                        <number>0</number>
+                       </property>
+                       <property name="bottomMargin">
                         <number>0</number>
                        </property>
                        <item>
@@ -641,6 +661,9 @@ QTableView::item:hover {
                          <layout class="QHBoxLayout" name="horizontalLayout_9">
                           <property name="spacing">
                            <number>0</number>
+                          </property>
+                          <property name="leftMargin">
+                           <number>3</number>
                           </property>
                           <item>
                            <widget class="QLabel" name="pri_1">
@@ -719,6 +742,9 @@ QTableView::item:hover {
                           <property name="spacing">
                            <number>0</number>
                           </property>
+                          <property name="leftMargin">
+                           <number>3</number>
+                          </property>
                           <item>
                            <widget class="QLabel" name="pri_2">
                             <property name="minimumSize">
@@ -778,6 +804,9 @@ QTableView::item:hover {
                           <property name="spacing">
                            <number>0</number>
                           </property>
+                          <property name="leftMargin">
+                           <number>3</number>
+                          </property>
                           <item>
                            <widget class="QLabel" name="pri_3">
                             <property name="minimumSize">
@@ -824,6 +853,18 @@ QTableView::item:hover {
                     </item>
                     <item>
                      <widget class="QFrame" name="frame_2">
+                      <property name="minimumSize">
+                       <size>
+                        <width>0</width>
+                        <height>50</height>
+                       </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>16777215</width>
+                        <height>50</height>
+                       </size>
+                      </property>
                       <property name="frameShape">
                        <enum>QFrame::StyledPanel</enum>
                       </property>
@@ -840,32 +881,7 @@ QTableView::item:hover {
                       <property name="frameShadow">
                        <enum>QFrame::Raised</enum>
                       </property>
-                     </widget>
-                    </item>
-                   </layout>
-                  </widget>
-                 </item>
-                 <item row="0" column="2">
-                  <widget class="QFrame" name="dashboard_frame_right">
-                   <property name="frameShape">
-                    <enum>QFrame::StyledPanel</enum>
-                   </property>
-                   <property name="frameShadow">
-                    <enum>QFrame::Raised</enum>
-                   </property>
-                   <layout class="QVBoxLayout" name="verticalLayout_18">
-                    <property name="spacing">
-                     <number>0</number>
-                    </property>
-                    <item>
-                     <widget class="QFrame" name="frame_7">
-                      <property name="frameShape">
-                       <enum>QFrame::StyledPanel</enum>
-                      </property>
-                      <property name="frameShadow">
-                       <enum>QFrame::Raised</enum>
-                      </property>
-                      <layout class="QVBoxLayout" name="verticalLayout_19">
+                      <layout class="QVBoxLayout" name="verticalLayout_12">
                        <item>
                         <widget class="QFrame" name="set_1">
                          <property name="frameShape">
@@ -875,6 +891,12 @@ QTableView::item:hover {
                           <enum>QFrame::Raised</enum>
                          </property>
                          <layout class="QHBoxLayout" name="horizontalLayout_12">
+                          <property name="leftMargin">
+                           <number>3</number>
+                          </property>
+                          <property name="rightMargin">
+                           <number>9</number>
+                          </property>
                           <item>
                            <widget class="QLabel" name="set_1_num">
                             <property name="minimumSize">
@@ -913,6 +935,9 @@ QTableView::item:hover {
                           <enum>QFrame::Raised</enum>
                          </property>
                          <layout class="QHBoxLayout" name="horizontalLayout_13">
+                          <property name="leftMargin">
+                           <number>3</number>
+                          </property>
                           <item>
                            <widget class="QLabel" name="set_2_num">
                             <property name="minimumSize">
@@ -951,6 +976,9 @@ QTableView::item:hover {
                           <enum>QFrame::Raised</enum>
                          </property>
                          <layout class="QHBoxLayout" name="horizontalLayout_14">
+                          <property name="leftMargin">
+                           <number>3</number>
+                          </property>
                           <item>
                            <widget class="QLabel" name="set_3_num">
                             <property name="minimumSize">
@@ -989,6 +1017,9 @@ QTableView::item:hover {
                           <enum>QFrame::Raised</enum>
                          </property>
                          <layout class="QHBoxLayout" name="horizontalLayout_15">
+                          <property name="leftMargin">
+                           <number>3</number>
+                          </property>
                           <item>
                            <widget class="QLabel" name="set_4_num">
                             <property name="minimumSize">
@@ -1027,6 +1058,9 @@ QTableView::item:hover {
                           <enum>QFrame::Raised</enum>
                          </property>
                          <layout class="QHBoxLayout" name="horizontalLayout_16">
+                          <property name="leftMargin">
+                           <number>3</number>
+                          </property>
                           <item>
                            <widget class="QLabel" name="set_5_num">
                             <property name="minimumSize">
@@ -1059,6 +1093,59 @@ QTableView::item:hover {
                       </layout>
                      </widget>
                     </item>
+                   </layout>
+                  </widget>
+                 </item>
+                 <item row="0" column="2">
+                  <widget class="QFrame" name="dashboard_frame_right">
+                   <property name="frameShape">
+                    <enum>QFrame::StyledPanel</enum>
+                   </property>
+                   <property name="frameShadow">
+                    <enum>QFrame::Raised</enum>
+                   </property>
+                   <layout class="QVBoxLayout" name="verticalLayout_11">
+                    <property name="spacing">
+                     <number>0</number>
+                    </property>
+                    <item>
+                     <widget class="QFrame" name="frame_10">
+                      <property name="maximumSize">
+                       <size>
+                        <width>16777215</width>
+                        <height>140</height>
+                       </size>
+                      </property>
+                      <property name="frameShape">
+                       <enum>QFrame::StyledPanel</enum>
+                      </property>
+                      <property name="frameShadow">
+                       <enum>QFrame::Raised</enum>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QFrame" name="frame_7">
+                      <property name="minimumSize">
+                       <size>
+                        <width>0</width>
+                        <height>50</height>
+                       </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>16777215</width>
+                        <height>50</height>
+                       </size>
+                      </property>
+                      <property name="frameShape">
+                       <enum>QFrame::StyledPanel</enum>
+                      </property>
+                      <property name="frameShadow">
+                       <enum>QFrame::Raised</enum>
+                      </property>
+                     </widget>
+                    </item>
                     <item>
                      <widget class="QFrame" name="frame_9">
                       <property name="frameShape">
@@ -1067,6 +1154,43 @@ QTableView::item:hover {
                       <property name="frameShadow">
                        <enum>QFrame::Raised</enum>
                       </property>
+                      <layout class="QVBoxLayout" name="verticalLayout_14">
+                       <item>
+                        <widget class="QLabel" name="jcn_num_1">
+                         <property name="text">
+                          <string>...</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QLabel" name="jcn_num_2">
+                         <property name="text">
+                          <string>...</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QLabel" name="jcn_num_3">
+                         <property name="text">
+                          <string>...</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QLabel" name="jcn_num_4">
+                         <property name="text">
+                          <string>...</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QLabel" name="jcn_num_5">
+                         <property name="text">
+                          <string>...</string>
+                         </property>
+                        </widget>
+                       </item>
+                      </layout>
                      </widget>
                     </item>
                    </layout>
